export const snapshot = {};

snapshot[`Instructions > Generate INSERT Instruction > should generate an INSERT Instruction if the field is an array of nodes, a rule evaluates to an INSERT Instruction and a numerical index is defined and a natural number for the INSERT position 1`] = `
[
  {
    definition: {
      kind: "FunctionDeclaration",
      name: {
        kind: "Identifier",
        text: "hello",
      },
      parameters: [
      ],
    },
    field: "statements",
    index: 1,
    path: "",
    type: "INSERT",
  },
]
`;

snapshot[`Instructions > Generate INSERT Instruction > should generate an INSERT Instruction if the field is an array of nodes, a rule evaluates to an INSERT Instruction and a string index is evaluated to a natural number for the INSERT position 1`] = `
[
  {
    definition: {
      kind: "FunctionDeclaration",
      name: {
        kind: "Identifier",
        text: "hello",
      },
      parameters: [
      ],
    },
    field: "statements",
    index: 0,
    path: "",
    type: "INSERT",
  },
]
`;

snapshot[`Instructions > Generate INSERT Instruction > should not generate an INSERT Instruction if the field is an array of nodes and the rule does not evaluate to an instruction 1`] = `
[
]
`;
